--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ @import url("../fonts/feather/css/feather.css");
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
