--- a/templates/overview.html
+++ b/templates/overview.html
@@ -1,42 +1,11 @@
-{% load static %}
-{% load bootstrap4 %}
-
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
-  <title>우진이랑 기록장</title>
-  <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico"/>
-  <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="static/css/styles.css" rel="stylesheet"/>
-</head>
-<body>
-<!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container px-5">
-    <a class="navbar-brand" href="#!">Secret Page</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="imageupload/">이미지 업로드</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+{% extends 'base.html' %}
+{% block content %}
 <!-- Page Content-->
 <div class="container px-4 px-lg-5">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
-    <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" style="object-fit: fill; width: 100%; height: 500px;"
+    <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
+                               style="object-fit: fill; width: 100%; height: 500px;"
                                src="./static/KakaoTalk_20220306_213856614.jpg" alt="..."/></div>
     <div class="col-lg-5">
       <h1 class="font-weight-light">{{d_day}}일 째</h1>
@@ -58,18 +27,11 @@
           <img src="{{ imagefile.imgfile.url }}" style="width: 100%; height: auto; object-fit: fill;" alt=""> <br>
         </div>
         <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-        <div class="card-footer"><a class="btn btn-primary btn-sm" href="/deleteimage/{{imagefile.id}}/remove">삭제하기</a></div>
+        <div class="card-footer"><a class="btn btn-primary btn-sm" href="/deleteimage/{{imagefile.id}}/remove">삭제하기</a>
+        </div>
       </div>
     </div>
     {% endfor %}
   </div>
 </div>
-<!-- Footer-->
-<footer class="py-5 bg-dark">
-  <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
-</footer>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="static/js/scripts.js"></script>
-</body>
+{% endblock %}
