--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imageupload' in url_name %} active {% endif %}"
-                                aria-current="{% if 'imageupload' in url_name %} page {% endif %}" href="../imageupload/">이미지 업로드</a></li>
+                                aria-current="{% if 'imageupload' in url_name %} page {% endif %}" href="../imageupload/">사진 추가</a></li>
         {% endwith %}
       </ul>
     </div>
