--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,25 @@
 {% load static %}
-{% load bootstrap4 %}
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <meta name="description" content=""/>
   <meta name="author" content=""/>
-  <title>우진이랑 기록장</title>
+  <title>우진이랑 추억 기록장</title>
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico"/>
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="../static/css/styles.css" rel="stylesheet"/>
+  <link href="/static/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container px-5">
-    <p class="feather icon-heart m-0 text-center" style="color:red; right-margin:1px;"></p><a class="navbar-brand"
-                                                                                              href="#!"> Secret Page</a>
+    <p class="feather icon-heart m-0 text-center" style="color:red; right-margin:1px;"></p>
+    <a class="navbar-brand" href="/"> Secret Page</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
-        class="navbar-toggler-icon"></span></button>
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% with url_name=request.resolver_match.url_name %}
@@ -29,16 +28,16 @@
         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imageupload' in url_name %} active {% endif %}"
-                                aria-current="{% if 'imageupload' in url_name %} page {% endif %}" href="../imageupload/">사진 추가</a></li>
+                                aria-current="{% if 'imageupload' in url_name %} page {% endif %}"
+                                href="/imageupload/">사진 추가</a></li>
         {% endwith %}
       </ul>
     </div>
   </div>
 </nav>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 {% block content %}
 {% endblock %}
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons rel=" stylesheet
-">
 <!-- Footer-->
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
@@ -48,5 +47,5 @@
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="./static/js/scripts.js"></script>
+<script src="../static/js/scripts.js"></script>
 </body>
