--- a/templates/image_upload.html
+++ b/templates/image_upload.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
-{% load static %}
-{% load bootstrap4 %}
 {% block content %}
 <br>
 <div class="container px-4 px-lg-5">
+<div class="container px-4 px-lg-5">
   <form method="POST" action="{% url 'imageupload' %}" enctype="multipart/form-data">{% csrf_token %}
-    <input type="text" id="title" placeholder="title" name="title"><br>
+    <input type="text" id="title" placeholder="제목" name="title"><br><br>
+    <input type="date" id="date" name="date"><br><br>
+    <input type="text" id="content" placeholder="설명" name="content"><br><br>
     <input class="btn btn-small" type="file" id="imgfile" name="imgfile" accept="image/*" onchange="loadFile(this)"><br>
-    <input type="date" id="date" name="date"><br>
     <br>
-    <button type="submit" class="btn btn-dark" value="제출">제출</button>
+    <button type="submit" class="btn btn-dark" value="제출">등록하기</button>
     <button class="btn btn-dark"><a href="/" style="text-decoration:none; color:white;">뒤로가기</a></button>
   </form>
 </div>
-{% endblock %}
+</div>
+{% endblock content %}
