--- a/templates/overview.html
+++ b/templates/overview.html
@@ -8,15 +8,14 @@
                                style="object-fit: fill; width: 100%; height: 500px;"
                                src="./static/KakaoTalk_20220306_213856614.jpg" alt="..."/></div>
     <div class="col-lg-5">
-      <h1 class="font-weight-light">{{d_day}}일 째</h1>
-      <p>어쩌구 저쩌구 내용내용!</p>
-      <a class="btn btn-primary" href="#!">Call to Action!</a>
+      <div class="feather icon-heart m-0 text-center" style="color:red; right-margin:1px; font-size:120px;">
+       <span style="color:black;">+{{d_day}}</span>
+      </div>
     </div>
   </div>
   <!-- Call to Action-->
   <div class="card text-white bg-secondary my-5 py-4 text-center">
-    <div class="card-body"><p class="text-white m-0">This call to action card is a great place to showcase some
-      important information or display a clever tagline!</p></div>
+    <div class="card-body"><p class="text-white m-0">민우와 우진이의 추억이 저장된 곳 입니다!!</p></div>
   </div>
   <!-- Content Row-->
   <div class="row gx-4 gx-lg-5">
@@ -26,12 +25,13 @@
         <div class="card-body" style="overflow: hidden;">
           <img src="{{ imagefile.imgfile.url }}" style="width: 100%; height: auto; object-fit: fill;" alt=""> <br>
         </div>
-        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
-        <div class="card-footer"><a class="btn btn-primary btn-sm" href="/deleteimage/{{imagefile.id}}/remove">삭제하기</a>
+        <div class="card-footer">
+          <a class="btn btn-primary btn-sm" href="/imagedetail/{{imagefile.id}}">More Info</a>
+          <a class="btn btn-primary btn-sm" href="/imagedelete/{{imagefile.id}}/remove">삭제하기</a>
         </div>
       </div>
     </div>
     {% endfor %}
   </div>
 </div>
-{% endblock %}
+{% endblock content %}
