--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,9 @@
   <meta name="description" content=""/>
   <meta name="author" content=""/>
   <title>우진이랑 추억 기록장</title>
+  <!-- example icon -->
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="/static/assets/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="/static/css/styles.css" rel="stylesheet"/>
 </head>
@@ -15,8 +16,7 @@
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container px-5">
-    <p class="feather icon-heart m-0 text-center" style="color:red; right-margin:1px;"></p>
-    <a class="navbar-brand" href="/"> Secret Page</a>
+    <a class="navbar-brand" href="/"> Secret Page<em style="color:red;">♡</em></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span></button>
@@ -25,7 +25,9 @@
         {% with url_name=request.resolver_match.url_name %}
         <li class="nav-item"><a class="nav-link {% if 'overview' in url_name %} active {% endif %}"
                                 aria-current="{% if 'overview' in url_name %} page {% endif %}" href="/">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+        <li class="nav-item"><a class="nav-link {% if 'todolist' in url_name %} active {% endif %}"
+                                aria-current="{% if 'todolist' in url_name %} page {% endif %}"
+                                href="/todolist/">To-Do list</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imageupload' in url_name %} active {% endif %}"
                                 aria-current="{% if 'imageupload' in url_name %} page {% endif %}"
@@ -35,17 +37,15 @@
     </div>
   </div>
 </nav>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 {% block content %}
 {% endblock %}
 <!-- Footer-->
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
-    <p class="feather icon-heart m-0 text-center" style="color:red;"></p>
-    <p class="m-0 text-center text-white">With 우진</p></div>
+    <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;">♡</em> 우진</p></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Core theme JS-->
-<script src="../static/js/scripts.js"></script>
+<script src="/static/js/scripts.js"></script>
 </body>
