--- a/templates/image_detail.html
+++ b/templates/image_detail.html
@@ -3,16 +3,16 @@
 <div class="container px-4 px-lg-5">
   <br>
   <div class="card-title">
-    <h2>{{image_detail.title}}</h2>
+    <h2>{{image.title}}</h2>
   </div>
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
                                style="object-fit: fill; width: 100%; height: 500px;"
-                               src="{{ image_detail.imgfile.url }}" alt="..."/></div>
+                               src="{{ image.imgfile.url }}" alt="..."/></div>
     <div class="col-lg-5">
       <div class=" m-0 text-center" style=" right-margin:1px; font-size:40px;">
         <span style="color:black;"></span>
-        <p style="font-size:40px; text-center;"> {{image_detail.content}} </p>
+        <p style="font-size:40px; text-center;"> {{image.content}} </p>
       </div>
     </div>
   </div>
