FIX: image_detail.html img src

--- a/templates/image_detail.html
+++ b/templates/image_detail.html
@@ -8,7 +8,7 @@
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
                                style="object-fit: fill; width: 100%; height: 500px;"
-                               src="{{ image.imgfile.url }}" alt="..."/></div>
+                               src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/{{ image.imgfile }}" alt="..."/></div>
     <div class="col-lg-5">
       <div class=" m-0 text-center" style=" right-margin:1px; font-size:40px;">
         <span style="color:black;"></span>
