--- a/templates/todo_list.html
+++ b/templates/todo_list.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     <div class="mb-4">
       <div>
-        <h5 class="title"> Todo_list </h5>
+        <h5 class="title"> 앞으로 할 일 </h5>
       </div>
       <div class="d-flex flex-row align-items-center">
         <input class="form-control-sm" name="title">
@@ -16,7 +16,7 @@
     </div>
     <div class="mb-4">
       <div class="my-2">
-        {% if todo_list %}
+        {% if todo_list|not_done %}
         {% for todo in todo_list|not_done %}
         <div style="font-size:20px;">
           <input class="form-check-input" type="checkbox" value="{{todo.id}}" id="delete_list" name="delete_list">
@@ -28,26 +28,36 @@
           {% endfor %}
       </div>
       <div>
-        <button type=submit class="btn btn-dark" value="delete" name="delete"> delete</button>
         <button type=submit class="btn btn-dark" value="done" name="done"> done</button>
+        <button type=submit class="btn btn-dark" value="delete" name="delete"> delete</button>
       </div>
       {% else %}
       <div class="col-12">할일을 추가하자</div>
       {% endif %}
     </div>
     <hr>
-    {% for todo in todo_list|done %}
-    <div style="font-size:20px;">
-      <input class="form-check-input" type="checkbox" value="{{todo.id}}" id="done_delete_list" name="done_delete_list">
-      <label class="form-check-label" for="done_delete_list">
-        {{todo.title}}
-      </label>
-    </div>
-    <p>
-      {% endfor %}
-    <div>
-      <button type=submit class="btn btn-dark" value="done_delete" name="done_delete"> delete</button>
-      <button type=submit class="btn btn-dark" value="not_done" name="not_done"> not done</button>
+    <div class="mb-4">
+      <div class="my-2">
+        {% if todo_list|done %}
+        <div>
+          <h5 class="title"> 한 일 </h5>
+        </div>
+        {% for todo in todo_list|done %}
+        <div style="font-size:20px;">
+          <input class="form-check-input" type="checkbox" value="{{todo.id}}" id="done_delete_list"
+                 name="done_delete_list">
+          <label class="form-check-label" for="done_delete_list">
+            {{todo.title}}
+          </label>
+        </div>
+        <p>
+          {% endfor %}
+        <div>
+          <button type=submit class="btn btn-dark" value="not_done" name="not_done"> not done</button>
+          <button type=submit class="btn btn-dark" value="done_delete" name="done_delete"> delete</button>
+        </div>
+        {% endif %}
+      </div>
     </div>
   </form>
 </div>
