--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                                 aria-current="{% if 'overview' in url_name %} page {% endif %}" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link {% if 'todolist' in url_name %} active {% endif %}"
                                 aria-current="{% if 'todolist' in url_name %} page {% endif %}"
-                                href="/todolist/">To-Do list</a></li>
+                                href="/todolist/">ToDo list</a></li>
         <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imageupload' in url_name %} active {% endif %}"
                                 aria-current="{% if 'imageupload' in url_name %} page {% endif %}"
@@ -42,7 +42,8 @@
 <!-- Footer-->
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
-    <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;">♡</em> 우진</p></div>
+    <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;">♡</em> 우진</p>
+  </div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
