--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: fixed; top: 0; width: 100%; z-index: 100;">
   <div class="container px-5">
     <a class="navbar-brand" href="/"> Secret Page<em style="color:red;">♡</em></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -39,9 +39,12 @@
     </div>
   </div>
 </nav>
-{% block content %}
-{% endblock %}
+<div style="height: auto; min-height: 100%; margin: 0;">
+  {% block content %}
+  {% endblock %}
+</div>
 <!-- Footer-->
+
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
     <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;">♡</em> 우진</p>
