--- a/templates/image_detail.html
+++ b/templates/image_detail.html
@@ -18,7 +18,7 @@
   </div>
   <div class="card-footer">
     <a class="btn btn-primary btn-sm" href="/">뒤로가기</a>
-    <a class="btn btn-primary btn-sm" href="/imagedelete/{{imagefile.id}}/remove">삭제하기</a>
+    <a class="btn btn-primary btn-sm" href="/imagedelete/{{image.id}}/remove">삭제하기</a>
   </div>
 </div>
 {% endblock content %}
