--- a/templates/todo_list.html
+++ b/templates/todo_list.html
@@ -9,7 +9,7 @@
         <h5 class="title"> 앞으로 할 일 </h5>
       </div>
       <div class="d-flex flex-row align-items-center">
-        <input class="form-control-sm" name="title">
+        <input class="form-control-sm" name="context">
         <button type=submit class="btn btn-small btn-dark btn-info mx-3 my-0" value="add" name="add"> add</button>
       </div>
     </div>
