--- a/templates/image_detail.html
+++ b/templates/image_detail.html
@@ -17,8 +17,8 @@
     </div>
   </div>
   <div class="card-footer">
-    <a class="btn btn-primary btn-sm" href="/">뒤로가기</a>
-    <a class="btn btn-primary btn-sm" href="/imagedelete/{{image.id}}/remove">삭제하기</a>
+    <a class="btn btn-primary btn-sm" href="/">Home</a>
+    <a class="btn btn-primary btn-sm" href="/imagedelete/{{image.id}}/remove">Delete</a>
   </div>
 </div>
 {% endblock content %}
