--- a/templates/overview.html
+++ b/templates/overview.html
@@ -25,8 +25,8 @@
           <img src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/{{ imagefile.imgfile }}" style="width: 100%; height: auto; object-fit: fill;" alt=""> <br>
         </div>
         <div class="card-footer">
-          <a class="btn btn-primary btn-sm" href="/imagedetail/{{imagefile.id}}">More Info</a>
-          <a class="btn btn-primary btn-sm" href="/imagedelete/{{imagefile.id}}/remove">삭제하기</a>
+          <a class="btn btn-primary btn-sm" href="/imagedetail/{{imagefile.id}}">Detail</a>
+          <a class="btn btn-primary btn-sm" href="/imagedelete/{{imagefile.id}}/remove">Delete</a>
         </div>
       </div>
     </div>
