--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
   <title>우진이랑 추억 기록장</title>
-  <!-- example icon -->
   <!-- Favicon-->
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="/static/css/styles.css" rel="stylesheet"/>
 </head>
 <body>
-<!-- Responsive navbar-->
+<!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: fixed; top: 0; width: 100%; z-index: 100;">
   <div class="container px-5">
     <a class="navbar-brand" href="/"> Secret Page<em style="color:red;">♡</em></a>
@@ -24,15 +21,12 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {% with url_name=request.resolver_match.url_name %}
         <li class="nav-item"><a class="nav-link {% if 'overview' in url_name %} active {% endif %}"
-                                aria-current="{% if 'overview' in url_name %} page {% endif %}" href="/">Home</a></li>
+                                href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link {% if 'todolist' in url_name %} active {% endif %}"
-                                aria-current="{% if 'todolist' in url_name %} page {% endif %}"
                                 href="/todolist/">ToDo list</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imagebydate' in url_name %} active {% endif %}"
-                                aria-current="{% if 'imagebydate' in url_name %} page {% endif %}"
                                 href="/imagebydate/">날짜별 사진</a></li>
         <li class="nav-item"><a class="nav-link {% if 'imageupload' in url_name %} active {% endif %}"
-                                aria-current="{% if 'imageupload' in url_name %} page {% endif %}"
                                 href="/imageupload/">사진 추가</a></li>
         {% endwith %}
       </ul>
