--- a/templates/overview.html
+++ b/templates/overview.html
@@ -4,9 +4,10 @@
 <div class="container px-4 px-lg-5">
   <!-- Heading Row-->
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
-    <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
-                               style="object-fit: fill; width: 100%; height: 500px;"
-                               src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/main_photo.jpg" alt="..."/></div>
+    <div class="col-lg-7">
+      <img class="img-fluid rounded mb-4 mb-lg-0" style="object-fit: fill; width: 100%; height: 500px;"
+           src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/main_photo.jpg" alt="..."/>
+    </div>
     <div class="col-lg-5">
       <em style="color:red; font-size:140px; font-style:normal;">♡</em>
       <span style="color:black; font-size:140px">+{{d_day}}</span>
@@ -22,7 +23,8 @@
     <div class="col-md-4 mb-5">
       <div class="card h-100">
         <div class="card-body" style="overflow: hidden;">
-          <img src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/{{ imagefile.imgfile }}" style="width: 100%; height: auto; object-fit: fill;" alt=""> <br>
+          <img src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/{{ imagefile.imgfile }}"
+               style="width: 100%; height: auto; object-fit: fill;" alt=""> <br>
         </div>
         <div class="card-footer">
           <a class="btn btn-primary btn-sm" href="/imagedetail/{{imagefile.id}}">Detail</a>
