--- a/templates/page-404.html
+++ b/templates/page-404.html
@@ -32,7 +32,6 @@
   <!-- vendor css -->
   <link rel="stylesheet" href="/static/css/styles.css">
 </head>
-
 <body>
 <div class="auth-wrapper">
   <div class="auth-content">
@@ -48,18 +47,12 @@
           <i class="feather x-circle"></i>
         </div>
         <h3 class="mb-4">뭔가 잘못누른거같아 우진아!</h3>
-
-        <br/>
-
-        <span class="mb-0 text-muted">
-                        Page not found - <a href="/">Home</a> 
-                    </span>
-
+        <br>
+        <span class="mb-0 text-muted">Page not found - <a href="/">Home</a></span>
       </div>
     </div>
   </div>
 </div>
-
 </body>
 </html>
 
