Delete embrassed things

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 <!--navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="position: fixed; top: 0; width: 100%; z-index: 100;">
   <div class="container px-5">
-    <a class="navbar-brand" href="/"> Secret Page<em style="color:red;">♡</em></a>
+    <a class="navbar-brand" href="/"> Secret Page<em style="color:red;"></em></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span></button>
@@ -43,7 +43,7 @@
 
 <footer class="py-5 bg-dark">
   <div class="container px-4 px-lg-5">
-    <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;">♡</em> 우진</p>
+    <p class="m-0 text-center text-white"> 민우 <em style="color:red; font-style:normal;"></em></p>
   </div>
 </footer>
 <!-- Bootstrap core JS-->
