--- a/templates/overview.html
+++ b/templates/overview.html
@@ -4,11 +4,11 @@
   <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7">
       <img class="img-fluid rounded mb-4 mb-lg-0" style="object-fit: fill; width: 100%; height: 500px;"
-           src="" alt="..."/>
+           src="https://woojinminwoo-image.s3.ap-northeast-2.amazonaws.com/media/main_photo.jpg" alt="..."/>
     </div>
     <div class="col-lg-5">
-      <em style="color:red; font-size:140px; font-style:normal;"></em>
-      <span style="color:black; font-size:140px">D-day</span>
+      <em style="color:red; font-size:140px; font-style:normal;">♡</em>
+      <span style="color:black; font-size:140px">+{{d_day}}</span>
     </div>
   </div>
   <div class="card text-white bg-secondary my-5 py-4 text-center">
